feat: EC2 workspace CloudFormation support hibernation
This enables hibernation support for hibernation on the EC2 side: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance-hibernationoptions.html

To use hibernation the operating system must also support it
https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Hibernate.html

--- a/addons/addon-base-raas/packages/base-raas-cfn-templates/src/templates/service-catalog/ec2-linux-instance.cfn.yml
+++ b/addons/addon-base-raas/packages/base-raas-cfn-templates/src/templates/service-catalog/ec2-linux-instance.cfn.yml
@@ -51,6 +51,13 @@ Parameters:
   EgressStoreIamPolicyDocument:
     Type: String
     Description: The IAM policy for launched workstation to access egress store
+  EnableHibernation:
+    Type: String
+    Description: Whether hibernation is enabled on this resource
+    Default: "false"
+    AllowedValues:
+      - "true"
+      - "false"
 
 Conditions:
   IamPolicyEmpty: !Equals [!Ref IamPolicyDocument, '{}']
@@ -195,6 +202,8 @@ Resources:
             Encrypted: true
             KmsKeyId: !Ref EncryptionKeyArn
       PropagateTagsToVolumeOnCreation: true
+      HibernationOptions:
+        Configured: !Ref EnableHibernation
       NetworkInterfaces:
         - AssociatePublicIpAddress: !If [ AppStreamEnabled, 'false', 'true' ]
           DeviceIndex: '0'
