--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,8 +16,12 @@
     "stackable",
     "webapp"
   ],
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "eslint.packageManager": "pnpm",
   "prettier.packageManager": "pnpm",
-  "eslint.workingDirectories": [{ "mode": "auto" }]
+  "eslint.workingDirectories": [
+    {
+      "mode": "auto"
+    }
+  ]
 }
